# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gh-pages.yml  pyci.yml
docs/: index.html
gh-page/: index.html
page_loader/: __init__.py  app.py  app_logger.py  cli.py  naming.py  page_loader.py  resources.py
page_loader/scripts/: page_loader.py
tests/: test_app.py  test_naming.py  test_page_loader.py  test_resources.py
tests/fixtures/: expected_page.html
