[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "the command line utility, which downloads a page from the network and puts it in the specified existing directory"
authors = ["Andrey Martsenius <artlynee@gmail.com>"]

packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
project-name = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
